<resources>
    <string name="app_name">GLB Animator Gear</string>
    <string name="bottom_drawer_image">Bottom Drawer Image</string>
    <string name="enter_avatar_glb_url">Enter Avatar GLB Url</string>
    <string name="avatar_default_url">https://models.readyplayer.me/64242ab4c9e8aa39b5d1b4dc.glb</string>
    <string name="enter_animation_glb_url">Enter Animation GLB Url</string>
    <string name="animate_button">Animate</string>
    <string name="enter_text_here">Enter text here</string>
</resources>